# MultiHeadCNN

./: .gitignore  README.md  config.toml  pyproject.toml
MHCNN/: dataloader.py  main.py  model.py  training_testing.py  utils.py
src/MHCNN/: model.py  training_testing.py
src/mhcnn/: __init__.py  dataloader.py  main.py  model.py  training_testing.py  utils.py
src/mhcnn/models/: cnn.py  resnet.py
src/mhcnn_test/: main.py
